--- a/frontend/src/components/Header.css
+++ b/frontend/src/components/Header.css
@@ -1,3 +1,11 @@
+html, body, #root {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -5,20 +13,24 @@
 }
 
 .header {
-  position: sticky;
+ position: fixed;
   top: 0;
+  left: 0;
+  right: 0;
   display: flex;
-  flex-wrap: wrap;
-  padding: 10px 20px;
-  background-color: #ff6b00;
+  flex-direction: column;
+ background-color: #FF7F50 ;
   z-index: 1000;
- 
+  width: 100vw; /* ancho de viewport */
+  max-width: 100vw; /* evitar scroll horizontal */
+  
 }
+
 .header-top {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 10px 20px;
+  padding: 0px 10px;
   width: 100%;
   
 }
@@ -84,6 +96,7 @@
   width: 100%;
   padding: 10px 0;
   overflow-x: auto; 
+  
 }
 
 .category-nav ul {
@@ -110,7 +123,8 @@
   background-color: #ff8a00;
 }
 
-/* Responsive para móviles */
+
+/* Responsive para m{óviles */
  /*@media (max-width: 768px) {
   .header-top {
     flex-direction: column;
@@ -126,5 +140,5 @@
   .category-nav ul {
     justify-content: flex-start; 
   }
- }*/
+ }
  
