--- a/frontend/src/pages/Home.css
+++ b/frontend/src/pages/Home.css
@@ -9,3 +9,12 @@
     gap: 20px;
     margin-top: 30px;
   }
+  .buscador-input {
+  padding: 0.5rem;
+  width: 100%;
+  max-width: 400px;
+  margin: 1rem auto;
+  display: block;
+  border-radius: 8px;
+  border: 1px solid #ccc;
+}
